<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:fontFamily="@font/helvetica_bold_family"
        android:textColor="@color/palette_black"
        android:text="@string/add_greenhouse"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/greenhouseName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/helvetica_bold_font"
        android:hint="Greenhouse Name"
        app:endIconMode="clear_text"
        android:textSize="16sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            android:textColor="@color/palette_black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_field"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:hint="Select a device"
        >

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/select_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/helvetica_regular"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/palette_red"
            android:text="Cancel" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/palette_cyan"
            android:text="Submit" />
    </LinearLayout>

</LinearLayout>