...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/helvetica_bold_font"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/email_icon"
        app:endIconMode="clear_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="50" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/helvetica_bold_font"
        android:hint="@string/login"
...
