...
        app:layout_constraintStart_toStartOf="parent"
        app:itemTextColor="@drawable/bottom_nav_item_selector"
        app:itemIconTint="@drawable/bottom_nav_item_selector"
        app:menu="@menu/bottom_nav_menu"/>

    <fragment
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
...
