...
    <string name="app_name">Green Guard</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_pass"><u> Forgot Password? </u></string>
    <string name="password_validation">* Must be at least 8 characters</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_email">Invalid email! Required format: example@example.com</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
...
